[gd_scene load_steps=6 format=3 uid="uid://lsr8en0dr8p8"]

[ext_resource type="Script" uid="uid://0v4ccvpdu6jx" path="res://main/main.gd" id="1_c651c"]
[ext_resource type="PackedScene" uid="uid://b2qle2n0ed7c1" path="res://level/level.tscn" id="1_pjrb6"]
[ext_resource type="PackedScene" uid="uid://beg4a8y1trsax" path="res://player/player.tscn" id="2_xwkvk"]
[ext_resource type="PackedScene" uid="uid://ch8gfxuo44r4v" path="res://hud/mainMenu.tscn" id="4_c651c"]
[ext_resource type="PackedScene" uid="uid://bgbqshgpfgpaj" path="res://hud/inGameHud.tscn" id="5_3wy1v"]

[node name="main" type="Node2D"]
script = ExtResource("1_c651c")

[node name="level" parent="." instance=ExtResource("1_pjrb6")]

[node name="player" parent="." instance=ExtResource("2_xwkvk")]
platform_wall_layers = 1
use_controller = false

[node name="mainMenu" parent="." instance=ExtResource("4_c651c")]

[node name="inGameHud" parent="." instance=ExtResource("5_3wy1v")]

[connection signal="game_over" from="player" to="." method="_on_player_game_over"]
[connection signal="set_control_type" from="mainMenu" to="." method="_on_main_menu_set_control_type"]
[connection signal="start_game" from="mainMenu" to="." method="_on_main_menu_start_game"]
